# my-mas

./: README.md  product-comparison-mas-theplan.md  product_comparison_report (ai llm).md  product_comparison_report (camera).md  product_comparison_report (reading glasses).md  product_comparison_report.md  pyproject.toml  report (AI_dev).md
src/my_mas/: crew (ori).py  crew.py  main (ori).py  main.py
src/my_mas/config/: agents (topicwrong).yaml  agents.yaml  tasks.yaml
