[project]
name = "my_mas"
version = "0.1.0"
description = "my_mas using crewAI"
authors = [{ name = "Cynthia Widjaja", email = "cynthia.widjaja@cstu.edu" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.75.0,<1.0.0"
]

[project.scripts]
my_mas = "my_mas.main:run"
run_crew = "my_mas.main:run"
train = "my_mas.main:train"
replay = "my_mas.main:replay"
test = "my_mas.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
